Record entity createdDate, title column 추가 / Record의 result빼고 조회하는 기능 추가